Fix checkmarks to work on mobile.

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -557,8 +557,20 @@ video {
   display: grid;
 }
 
-.h-screen{
-  height: 100vh;
+.h-8{
+  height: 2rem;
+}
+
+.min-h-full{
+  min-height: 100%;
+}
+
+.w-8{
+  width: 2rem;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .flex-1{
@@ -758,7 +770,7 @@ html, body {
   scroll-snap-type: y mandatory;
 }
 
-.h-screen {
+.snap {
   scroll-snap-align: start;
 }
 
@@ -771,6 +783,16 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Rubik', sans-serif;
   font-weight: 300;
+}
+
+.bg {
+  background: url(assets/bg.jpg) no-repeat center center;
+  background-size: cover;
+}
+
+.bg2 {
+  background: url(assets/bg2.jpg) no-repeat center center fixed;
+  background-size: cover;
 }
 
 @media (min-width: 640px){
